--- a/guard.html
+++ b/guard.html
@@ -43,19 +43,19 @@
             <a href="" class="contact_link1">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
-              Kuala Lumpur,
-            </span>
+                Kuala Lumpur,
+              </span>
             </a>
             <a href="" class="contact_link2">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-            Call : +01 1-19981755&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </span>
+                Call : +01 1-19981755&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </span>
             </a>
             <a href="" class="contact_link3">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-              hamzi.faqih47@gmail.com
-            </span>
+                hamzi.faqih47@gmail.com
+              </span>
             </a>
           </div>
         </div>
@@ -65,7 +65,7 @@
           <nav class="navbar navbar-expand-lg custom_nav-container">
             <a class="navbar-brand" href="index.html">
               <span>
-              Hamzi Faqih&nbsp; </span>
+                Hamzi Faqih&nbsp; </span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class=""></span>
@@ -98,71 +98,46 @@
   </div>
 
   <!-- team section -->
-
   <section class="team_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
-        <h2>
-        skills &amp; Interest&nbsp; </h2>
+        <h2>Skills &amp; Interest</h2>
         <p>
           My proficiency extends across a diverse spectrum of technologies, including HTML, CSS, PHP, and Laravel, which vividly mirrors my ardor for crafting dynamic and resourceful web applications. My keen enthusiasm lies in remaining actively engaged with the constant evolution of the web development landscape, ensuring that I am well-versed in the most recent trends and cutting-edge technologies. This commitment reflects not only my dedication to staying at the forefront of the field but also my eagerness to contribute to and shape the future of web development.
         </p>
       </div>
+
+      <!-- New text sections -->
       <div class="row">
-        <div class="col-md-4 col-sm-6 mx-auto ">
-          <div class="box">
-            <div class="img-box">
-              <img src="images/t1.jpg" alt="">
-            </div>
-            <div class="detail-box">
-              <h5>
-                Martin Anderson
-              </h5>
-              <h6 class="">
-                supervisor
-              </h6>
-            </div>
+        <div class="col-md-4 col-sm-6 mx-auto">
+          <div class="additional-text-box">
+            <p>Front-end Development:&nbsp;</p>
+            <p>Experience in creating captivating user interfaces using HTML, CSS, and JavaScript. Proficient in building responsive and user-friendly web applications.</p>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 mx-auto ">
-          <div class="box">
-            <div class="img-box">
-              <img src="images/t2.jpg" alt="">
-            </div>
-            <div class="detail-box">
-              <h5>
-                Denny Butler
-              </h5>
-              <h6 class="">
-                supervisor
-              </h6>
-            </div>
+
+        <div class="col-md-4 col-sm-6 mx-auto">
+          <div class="additional-text-box">
+            <p>PHP and Laravel:</p>
+            <p>&nbsp;Strong backend development skills with a focus on PHP and Laravel framework. Track record of delivering high-performance and scalable web solutions.</p>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 mx-auto ">
-          <div class="box">
-            <div class="img-box">
-              <img src="images/t3.jpg" alt="">
-            </div>
-            <div class="detail-box">
-              <h5>
-                Nathan Mcpherson
-              </h5>
-              <h6 class="">
-                supervisor
-              </h6>
-            </div>
+
+        <div class="col-md-4 col-sm-6 mx-auto">
+          <div class="additional-text-box">
+            <p>Database Management:&nbsp;</p>
+            <p>Specialization in database management and server-side scripting. Ensures seamless integration of web applications with databases for efficient and data-driven solutions.</p>
           </div>
         </div>
       </div>
+
+      <!-- Existing team boxes... -->
+
       <div class="btn-box">
-        <a href="">
-          View All
-        </a>
+        <a href="#">View All</a>
       </div>
     </div>
   </section>
-
   <!-- end team section -->
 
   <!-- info section -->
@@ -173,70 +148,69 @@
           <div class="info_logo">
             <a class="navbar-brand" href="index.html">
               <span>
-              &nbsp; </span>
+                &nbsp; </span>
             </a>
-            <p>
-            &nbsp; </p>
+            <p>&nbsp;
+               </p>
           </div>
         </div>
         <div class="col-md-3">
           <div class="info_links">
-            <h5>
-            &nbsp; </h5>
+            <h5>&nbsp;
+               </h5>
             <ul>
               <li>
                 <a href="">
-                &nbsp; </a>
+                  &nbsp; </a>
               </li>
               <li>
                 <a href="">
-                &nbsp; </a>
+                  &nbsp; </a>
               </li>
               <li>
                 <a href="">
-                &nbsp; </a>
+                  &nbsp; </a>
               </li>
               <li>
                 <a href="">
-                &nbsp; </a>
+                  &nbsp; </a>
               </li>
             </ul>
           </div>
         </div>
         <div class="col-md-3">
           <div class="info_info">
-            <h5>
-            &nbsp; </h5>
+            <h5>&nbsp;
+               </h5>
           </div>
           <div class="info_contact">
             <a href="" class="">
               <i class="fa" aria-hidden="true"></i>
               <span>
-              &nbsp; </span>
+                &nbsp; </span>
             </a>
             <a href="" class="">
               <i class="fa" aria-hidden="true"></i>
               <span>
-              &nbsp; </span>
+                &nbsp; </span>
             </a>
             <a href="" class="">
               <i class="fa" aria-hidden="true"></i>
               <span>
-              &nbsp; </span>
+                &nbsp; </span>
             </a>
           </div>
         </div>
         <div class="col-md-3">
           <div class="info_form ">
-            <h5>
-            &nbsp; </h5>
+            <h5>&nbsp;
+               </h5>
             <form action="#">
-<button>
-            follow&nbsp; </button>
+              <button>
+                follow&nbsp; </button>
             </form>
             <div class="social_box">
-              <a href="https://www.facebook.com/muhdhamzi.faqih.9?mibextid=ZbWKwL"
-				 target="_blank">
+              <a href="https://www.facebook.com/muhdhamzi.faqih.9?mibextid=ZbWKwL" target="_blank">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
               </a>
               <a href="">
@@ -245,8 +219,7 @@
               <a href="">
                 <i class="fa fa-youtube" aria-hidden="true"></i>
               </a>
-              <a href="https://www.instagram.com/"
-				 target="_blank">
+              <a href="https://www.instagram.com/" target="_blank">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
             </div>
@@ -255,16 +228,12 @@
       </div>
     </div>
   </section>
-
   <!-- end info_section -->
-
-
-
 
   <!-- footer section -->
   <footer class="container-fluid footer_section">
     <p>
-    &copy; <span id="currentYear"></span> All Rights Reserved. Created by HamziFaqih_21B10I016 @ Copyright.2023&nbsp; </p>
+      &copy; <span id="currentYear"></span> All Rights Reserved. Created by HamziFaqih_21B10I016 @ Copyright.2023&nbsp; </p>
   </footer>
   <!-- footer section -->
 
