--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
         <div class="col-md-6 px-0">
           <div class="img_container">
             <div class="img-box">
-              <img src="../Assignment1WAD/assets/images/about/profile_image.jpeg" alt="" />
+              <img src="images/profile_image.jpeg" alt="" />
             </div>
           </div>
         </div>
