--- a/guard.html
+++ b/guard.html
@@ -111,21 +111,21 @@
       <div class="row">
         <div class="col-md-4 col-sm-6 mx-auto">
           <div class="additional-text-box">
-            <p>Front-end Development:&nbsp;</p>
+            <p>1. Front-end Development:&nbsp;</p>
             <p>Experience in creating captivating user interfaces using HTML, CSS, and JavaScript. Proficient in building responsive and user-friendly web applications.</p>
           </div>
         </div>
 
         <div class="col-md-4 col-sm-6 mx-auto">
           <div class="additional-text-box">
-            <p>PHP and Laravel:</p>
+            <p>2. PHP and Laravel:</p>
             <p>&nbsp;Strong backend development skills with a focus on PHP and Laravel framework. Track record of delivering high-performance and scalable web solutions.</p>
           </div>
         </div>
 
         <div class="col-md-4 col-sm-6 mx-auto">
           <div class="additional-text-box">
-            <p>Database Management:&nbsp;</p>
+            <p>3. Database Management:&nbsp;</p>
             <p>Specialization in database management and server-side scripting. Ensures seamless integration of web applications with databases for efficient and data-driven solutions.</p>
           </div>
         </div>
