--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
           <div class="carousel-item active">
             <div class="box">
               <div class="img-box">
-                <img src="../../Music/big_mac.jpg" alt="">
+                <img src="images/big_mac.jpg" alt="">
               </div>
               <div class="detail-box">
                 <h4>
@@ -442,7 +442,7 @@
           <div class="carousel-item ">
             <div class="box">
               <div class="img-box">
-                <img src="images/client.png" alt="">
+                <img src="images/gambar_ni.jpeg" alt="">
               </div>
               <div class="detail-box">
                 <h4>
