--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
     <div class="container ">
       <div class="heading_container heading_center">
         <h2>
-        I am professional programmer&nbsp; </h2>
+        I am professional developer&nbsp; </h2>
       </div>
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
