--- a/about.html
+++ b/about.html
@@ -211,7 +211,7 @@
               <a href="">
                 <i class="fa fa-youtube" aria-hidden="true"></i>
               </a>
-              <a href="https://www.instagram.com/"
+              <a href="https://instagram.com/vr_hf47?igshid=MW4zOXZsdGVyd2Q1Ng=="
 				 target="_blank">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
