--- a/service.html
+++ b/service.html
@@ -282,7 +282,8 @@
               <p>
                 In our daily life, we sometimes need to do exercises in order to stay fit.
               </p>
-              <a href="">
+              <a href="https://health.clevelandclinic.org/9-benefits-of-hiking/"
+				 target="_blank">
                 Read More
               </a>
             </div>
