--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
                       </span>
                     </h1>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                      sed do eiusmod magna aliqua. Ut enim ad minim veniam
+                      Full of Tech Senses. Serving technology better. The Best Tech, Best Future. Building the Future with Tech
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1"> Read more </a>
